# fastapi-hands-on

./: README.md  docker-compose.yaml  pyproject.toml
api/: migrate_db.py
api/cruds/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
